Thicken nav bar,fixed bug:content overlap with tag

--- a/css sheets/about-styles.css
+++ b/css sheets/about-styles.css
@@ -1,8 +1,8 @@
 /*about section*/
 
-.about {
+/* .about {
   margin-bottom: 50px;
-}
+} */
 
 .about-top-section {
   /* background-color: violet; */
