--- a/css sheets/education-styles.css
+++ b/css sheets/education-styles.css
@@ -1,7 +1,7 @@
 /*education section*/
-.education {
+/* .education {
   margin-bottom: 50px;
-}
+} */
 
 .education_div {
   display: flex;
