--- a/css sheets/project-styles.css
+++ b/css sheets/project-styles.css
@@ -1,4 +1,4 @@
 .project {
   min-height: 1500px;
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 }
