--- a/css sheets/topHeader-styles.css
+++ b/css sheets/topHeader-styles.css
@@ -11,7 +11,7 @@
 }
 
 .navigation_bar {
-  padding: 5px 0;
+  padding: 10px 0;
   margin: 0%;
   background-color: #bcb8b1;
   display: flex;
