--- a/css sheets/workExp-styles.css
+++ b/css sheets/workExp-styles.css
@@ -1,7 +1,7 @@
 /* work experience section */
-.work_exp {
+/* .work_exp {
   margin-bottom: 50px;
-}
+} */
 
 article {
   background-color: #c4bcb2;
